Update eclipse.sh
環境設定項目追記